finaly fix catalog  page input css  and fix position small loader and change logic radio btn

--- a/app/catalog/filter/@sidebar/SideBarCatalog.module.css
+++ b/app/catalog/filter/@sidebar/SideBarCatalog.module.css
@@ -80,6 +80,12 @@
     border: none;
     font-size: 16px;
     color: var(--color-text-dark);
+
+}
+
+.sidebarInput:-webkit-autofill {
+    box-shadow: 0 0 0 1000px #f3f4f6 inset;
+    -webkit-text-fill-color: var(--color-text-dark);
 }
 
 .sidebarInput:focus {
