--- a/components/LoaderSmall/LoaderSmall.module.css
+++ b/components/LoaderSmall/LoaderSmall.module.css
@@ -5,6 +5,7 @@
   border-top-color: #ff0000;
   border-radius: 50%;
   animation: spin 0.7s linear infinite;
+  margin: 0 auto;
 }
 
 @keyframes spin {
